--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/": ["/src/*"]
+      "@/*": ["src/*"]
     },
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["dist", "node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
