--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "@vueuse/core": "^8.3.1",
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
     "js-cookie": "^3.0.1",
@@ -52,6 +53,7 @@
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.34.7"
   }
 }
