--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chalk": "^4.1.2",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-auto-import": "^0.1.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^8.7.1",
     "husky": "^7.0.4",
@@ -53,7 +54,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-scss": "^4.2.0",
     "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.7.1",
+    "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
     "vite-plugin-compression": "^0.5.1",
