路由优化以及mock配置

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:dev": "vue-tsc --noEmit && vite build --mode development",
     "build:prod": "vue-tsc --noEmit && vite build",
     "build:stage": "vue-tsc --noEmit && vite build --mode staging",
+    "dev:mock": "cross-env vite",
     "preview": "vite preview",
     "lint": "eslint --fix --ext .js,.ts,.vue src/**"
   },
@@ -26,6 +27,8 @@
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
     "js-cookie": "^3.0.1",
+    "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
     "sass": "^1.51.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13",
@@ -34,12 +37,14 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.30",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "chalk": "^4.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-auto-import": "^0.1.1",
@@ -58,6 +63,7 @@
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^0.34.7"
