外部框架基本搭建并与node后台数据连接

--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,4 @@ VITE_APP_TITLE = viteTs模板
 VITE_APP_ENV = 'development'
 
 # viteTs模板/开发环境
-VITE_APP_BASE_API = '/dev-api'
+VITE_APP_BASE_API = '/api'
