--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,12 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@": ["src"],
+      "@/*": ["src/*"],
     },
-    "types": ["element-plus/global"]
+    "types": ["element-plus/global", "node", "webpack-env"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "auto-imports.d.ts", "src/mock/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "auto-imports.d.ts", "src/mock/**/*.ts", "src/utils/ruoyi.js"],
   "exclude": ["dist", "node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
