--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.30",
     "@types/nprogress": "^0.2.0",
+    "@types/path-browserify": "^1.0.0",
+    "@types/webpack-env": "^1.16.4",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "@vitejs/plugin-vue": "^2.3.1",
@@ -52,6 +54,7 @@
     "eslint-plugin-vue": "^8.7.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.6.2",
     "rollup-plugin-visualizer": "^5.6.0",
     "stylelint": "^14.8.1",
